# hello-flit-django-modelcluster

./: .gitignore  CHANGELOG.txt  README.rst  pyproject.toml  setup.cfg
.github/workflows/: test.yml
