[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "django-modelcluster"
authors = [{name = "Matthew Westcott", email = "matthew.westcott@torchbox.com"}]
version = "6.0"
description = "Django extension to allow working with 'clusters' of models as a single unit, independently of the database"
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3 :: Only',
    'Framework :: Django',
]
requires-python = ">=3.7"
dependencies = [
    "pytz>=2015.2",
    "django>=2.2",
]

[project.optional-dependencies]
taggit = [
    "django-taggit>=0.20",
]

[project.urls]
Home = "https://github.com/wagtail/django-modelcluster"

[tool.flit.module]
name = "modelcluster"

[tool.flit.sdist]
exclude = [
    ".github/",
    "tests/",
    ".gitignore",
    "runtests.py",
    "shell.py"
]
